tests/ui/higher-rank-trait-bounds/hang-on-deeply-nested-dyn.rs
// normalize-stderr-test: "long-type-\d+" -> "long-type-hash"

fn id(
    f: &dyn Fn(u32),
) -> &dyn Fn(
    &dyn Fn(
        &dyn Fn(
            &dyn Fn(&dyn Fn(&dyn Fn(&dyn Fn(&dyn Fn(&dyn Fn(&dyn Fn(&dyn Fn(&dyn Fn(u32))))))))),
        ),
    ),
) {
    f
    //~^ ERROR mismatched types
}

fn main() {}
